# Alura-Django

./: pyproject.toml  requirements.txt
galeria/: admin.py  models.py  urls.py  views.py
galeria/migrations/: 0001_initial.py  0002_fotografia_categoria.py  0003_fotografia_publicada.py  0004_fotografia_data_fotografia.py  0005_alter_fotografia_foto.py  0006_fotografia_usuario.py
setup/: settings.py  urls.py
templates/galeria/: base.html  buscar.html  imagem.html  index.html
templates/partials/: _alertas.html  _menu.html
templates/usuarios/: cadastro.html  login.html
usuarios/: forms.py  urls.py  views.py
