[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["rafaelmarquespn <rafaelmarquespn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
python-dotenv = "^0.21.1"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
